feat: add Google Maps integration and social media components
- Add Google Maps component with monochrome styling and Vienna locations
- Create social media components (InstagramFollowButton, SocialMediaLinks)
- Add affiliations data structure for footer logo tiles
- Update .gitignore to exclude agent and temporary files
- Add environment template (.env.local.example)

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,15 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Agent and development files
+.sisyphus/
+dev.log
+server.log
+nul
+pt-website/
+
+# Temporary files
+*.tmp
+*.temp
+*.log
