--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.8",
     "@types/google.maps": "^3.58.1",
+    "@types/leaflet": "^1.9.21",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.27.5",
     "gray-matter": "^4.0.3",
+    "leaflet": "^1.9.4",
     "next": "16.1.3",
     "next-intl": "^4.7.0",
     "next-mdx-remote": "^5.0.0",
@@ -22,6 +24,7 @@
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
+    "react-leaflet": "^5.0.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0"
   },
